[package]
name = "akatsuki-pp-py"
version = "1.0.0"
description = "osu! difficulty and pp calculation for all modes"
authors = ["Max Ohn <ohn.m@hotmail.de>", "tsunyoku <tsunyoku@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
name = "akatsuki_pp_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17", features = ["extension-module", "macros"] }
akatsuki-pp = { git = "https://github.com/scaldings/mamestagram-pp-rs", rev = "b60a241bba290e4e30dfcfa465671d4356f0cf64" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"
