[package]
name = "akatsuki-pp-py"
version = "1.0.0"
description = "osu! difficulty and pp calculation for all modes"
authors = ["Max Ohn <ohn.m@hotmail.de>", "tsunyoku <tsunyoku@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
name = "akatsuki_pp_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17", features = ["extension-module", "macros"] }
akatsuki-pp = { git = "https://github.com/Mamestagram/mamestagram-pp-rs", rev = "a05fc758b834ccfce1b0a22422e5eebbe45e9d78" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"
